# xypher

./: .clang-format  .dockerignore  .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT.md  INSTALLATION.md  LANGUAGE_SPEC.md  LICENSE  NOTICE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  STDLIB.md  build.bat  build.sh  docker-compose.yml  enums  hashmap  test.xyp  testing.sh
.cache/clangd/index/: AST.cpp.399EB9B81CD9B506.idx  AST.h.A8A87929B674F5E1.idx  ASTDumper.cpp.F3C371A9995FA6D4.idx  ASTDumper.h.5DF0CD418D21EC0D.idx  ASTVisitor.cpp.816C9AC8B0F9DC25.idx  ASTVisitor.h.E4271609801950A7.idx  CodeGenerator.cpp.DF587B3728AC3737.idx  CodeGenerator.h.DB7773857C397933.idx  Common.h.53ACD95C57CA3FF4.idx  Diagnostics.cpp.C668E2E1913B055C.idx  Diagnostics.h.AF0E959B7E292B0C.idx  FFI.cpp.5A5F8F94823B58DA.idx  FFI.h.68140139FFD35EE9.idx  JIT.cpp.5CC546E5F4EEA6C1.idx  JIT.h.21AEC96A373BEE17.idx  LLVMBackend.cpp.6803FC72DCB03AD9.idx  LLVMBackend.h.9567E84E7105068A.idx  Lexer.cpp.D94831229F4EE0AC.idx  Lexer.h.88AEFE32A5827C6F.idx  Module.cpp.E242C3A3A427E52C.idx  Module.h.A631742AD7A7F786.idx  Optimizer.cpp.C92FD7FF6C643061.idx  Optimizer.h.9E8E4F344C5E3E28.idx  Parser.cpp.6D6124E207DA1078.idx  Parser.h.E853396A739E4746.idx  Runtime.cpp.96147F33ED85772B.idx  SemanticAnalyzer.cpp.24169A3D29B51789.idx  SemanticAnalyzer.h.8CA57DC55924003B.idx  SourceLocation.cpp.ED6BDAABD3CDE7DD.idx  SourceLocation.h.71BE185A25A036FC.idx  SymbolTable.cpp.C031CDE66C63D56B.idx  SymbolTable.h.D35ED3143FF855ED.idx  TargetMachine.cpp.DEBC98C3864F4834.idx  TargetMachine.h.352096F51DF8C226.idx  Token.cpp.2F6346FDF64910CC.idx  Token.h.A55F85C41C606490.idx  TypeChecker.cpp.08B77027529A7ED6.idx  TypeChecker.h.11317825D6ABD8DE.idx  Types.cpp.9C22B58A559AF05D.idx  Types.h.FFC9138440AA5A72.idx  (+13 more)
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml  test.yml
docker/: Dockerfile  README.md
docs/: STDLIB.md
examples/: advanced_math.xyp  arrays.xyp  calculator.xyp  control_flow.xyp  enums.xyp  fibonacci.xyp  functions.xyp  hashmap.xyp  hashmap_demo.xyp  hello.xyp  math.xyp  math_operations.xyp  modules.xyp  pattern_matching.xyp  recursion.xyp  string_ops.xyp  structs.xyp  test_math_native.xyp  time.xyp  timing.xyp  trace_debug.xyp  variables.xyp
include/: Common.h  XypherConfig.h
include/ast/: AST.h  ASTDumper.h  ASTVisitor.h  Module.h  Types.h
include/backend/: JIT.h  Optimizer.h  TargetMachine.h
include/codegen/: CodeGenerator.h  FFI.h  LLVMBackend.h
include/frontend/: Diagnostics.h  SourceLocation.h
include/lexer/: Lexer.h  Token.h
include/parser/: Parser.h
include/sema/: ModuleRegistry.h  SemanticAnalyzer.h  SymbolTable.h  TypeChecker.h
src/: main.cpp
src/ast/: AST.cpp  ASTDumper.cpp  ASTVisitor.cpp  Module.cpp  Types.cpp
src/backend/: JIT.cpp  Optimizer.cpp  TargetMachine.cpp
src/codegen/: CodeGenerator.cpp  FFI.cpp  LLVMBackend.cpp
src/frontend/: Diagnostics.cpp  SourceLocation.cpp
src/lexer/: Lexer.cpp  Token.cpp
src/parser/: Parser.cpp
src/runtime/: Runtime.cpp
src/sema/: ModuleRegistry.cpp  SemanticAnalyzer.cpp  SymbolTable.cpp  TypeChecker.cpp
std/: CMakeLists.txt  README.md
std/include/: xystd.h
std/src/: array.c  debug.c  file.c  hashmap.c  io.c  math.c  memory.c  runtime.c  string.c  time.c
tests/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  xypher-tests.vcxproj  xypher-tests.vcxproj.filters
